task1/test_results_defects/infer_test/func_pointer/report.txt
#0
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/func_pointer.c:101: error: Null Dereference
  pointer `str_rev` last assigned on line 98 could be null and is dereferenced at line 101, column 13.
   99.         for (j = 0; j < i; j++)
  100.         {
  101.             str_rev[j] = str1[i-j-1];
                   ^
  102.         }
  103.         str_rev[i] = '\0';

#1
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/func_pointer.c:103: error: Null Dereference
  pointer `str_rev` last assigned on line 98 could be null and is dereferenced at line 103, column 9.
  101.             str_rev[j] = str1[i-j-1];
  102.         }
  103.         str_rev[i] = '\0';
               ^
  104.         return str_rev;
  105.     }

#2
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/func_pointer.c:151: error: Null Dereference
  pointer `doubleptr` last assigned on line 147 could be null and is dereferenced at line 151, column 3.
  149. 	for(i=0;i<10;i++)
  150. 	{
  151. 		doubleptr[i]=(long*) malloc(10*sizeof(long));
         ^
  152. 	}
  153. 	for(i=0;i<10;i++)

#3
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/func_pointer.c:210: error: Null Dereference
  pointer `doubleptr` last assigned on line 206 could be null and is dereferenced at line 210, column 3.
  208. 	for(i=0;i<10;i++)
  209. 	{
  210. 		doubleptr[i]=(float *) malloc(10*sizeof(float));
         ^
  211. 	}
  212. 	for(i=0;i<10;i++)

#4
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/func_pointer.c:338: error: Null Dereference
  pointer `u` last assigned on line 337 could be null and is dereferenced at line 338, column 4.
  336. 		{
  337. 			u = (func_pointer_009_u_001 *)calloc(1,sizeof(func_pointer_009_u_001));
  338. 			u->a = 40;
          ^
  339. 			return u;
  340. 		}

#5
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/func_pointer.c:353: error: Null Dereference
  pointer `p` last assigned on line 349 could be null and is dereferenced at line 353, column 8.
  351. 	fptr = (func_pointer_009_u_001 (*)(void))func_pointer_009_func_001;
  352. 	*p = fptr();/*Tool should detect this line as error*/ /*ERROR:Bad function pointer casting*/
  353. 	ret = p->b;
              ^
  354. 	free(p);
  355. 	p= NULL;

#6
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/func_pointer.c:395: error: Null Dereference
  pointer `str_rev` last assigned on line 392 could be null and is dereferenced at line 395, column 13.
  393.         for (j = 0; j < i; j++)
  394.         {
  395.             str_rev[j] = str1[j];
                   ^
  396.         }
  397.         str_rev[j] = '\0';

#7
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/func_pointer.c:397: error: Null Dereference
  pointer `str_rev` last assigned on line 392 could be null and is dereferenced at line 397, column 9.
  395.             str_rev[j] = str1[j];
  396.         }
  397.         str_rev[j] = '\0';
               ^
  398.         return str_rev;
  399.     }

#8
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/func_pointer.c:438: error: Null Dereference
  pointer `p` last assigned on line 437 could be null and is dereferenced by call to `memcpy()` at line 438, column 2.
  436. 	int i,j;
  437. 	p= (int (*)[]) malloc (sizeof arr);
  438. 	memcpy(p, arr, sizeof(arr));
        ^
  439. 	for (i = 0;i< 4; i++)
  440. 	{

#9
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/func_pointer.c:601: error: Null Dereference
  pointer `st1` last assigned on line 600 could be null and is dereferenced by call to `memset()` at line 601, column 5.
  599. 	st.a = 10;
  600. 	st1 = (func_pointer_015_s_001 *)malloc(1*sizeof(func_pointer_015_s_001));
  601.     memset(st1, 0, sizeof(*st1));
           ^
  602. 
  603. 	func_pointer_015_func_001(st1);

Found 10 issues
          Issue Type(ISSUED_TYPE_ID): #
  Null Dereference(NULL_DEREFERENCE): 10
